--- a/src/app/add-goats/add-goats.component.html
+++ b/src/app/add-goats/add-goats.component.html
@@ -1,1 +1,34 @@
-<p>add-goats works!</p>
+<div class="container">
+    <div class="addsection">
+      <div class="text-center"><h1>Add New GOAT</h1></div>
+      <div style="width:50%;margin:auto">
+        <form [formGroup]="addForm" novalidate class="form">
+          <div class="row">
+            <div class="col-md-6">First Name</div>
+            <div class="col-md-6"><input type="text" class="form-control" name="first_name" formControlName="first_name"></div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">Last Name</div>
+            <div class="col-md-6"><input class="form-control" type="text" name="last_name" formControlName="last_name"></div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">Company</div>
+            <div class="col-md-6"><input type="text" class="form-control" name="company" formControlName="company"></div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">Date of Birth</div>
+            <div class="col-md-6"><input type="text" class="form-control" name="date_of_birth" formControlName="date_of_birth"></div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">Image</div>
+            <div class="col-md-6"><input type="text" class="form-control" name="url_img" formControlName="url_img"></div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <button class="btn btn-success"   (click)="onSubmit()">ADD STUDENT</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
