--- a/src/app/list-goats/list-goats.component.html
+++ b/src/app/list-goats/list-goats.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="row">
-        <div *ngFor="let goat of goatList">
+        <div *ngFor="let goat of goats">
             <div (click)="goToGoat(goat)" class="card1">
                 <div class="card1_img">
                     <img [src]="goat.url_img">
