--- a/src/app/list-goats/list-goats.component.css
+++ b/src/app/list-goats/list-goats.component.css
@@ -5,7 +5,7 @@
 }
 .card1{
     width: 300px;
-    height: 550px;
+    height: 600px;
     padding: 5px;
     margin: 1rem;
     border: 4px solid #ffa600;
@@ -34,4 +34,23 @@
     font-size: 2rem;
     font-weight: 600;
     text-decoration: underline solid #ffa600;
+}
+
+.card1_link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card1_link a{
+    text-align: center;
+    font-size: 1rem;
+    font-weight: 400;
+    text-transform: capitalize;
+    text-decoration: none;
+    height: 25px;
+    width: 100px;
+    padding-top: 5px;
+    border-radius: 25px;
+    background-color: #008cff;
 }
