--- a/src/app/list-goats/list-goats.component.html
+++ b/src/app/list-goats/list-goats.component.html
@@ -1,16 +1,19 @@
 <div class="container">
     <div class="row">
         <div *ngFor="let goat of goats">
-            <div (click)="getSingleGoat(goat.id)" class="card1">
+            <div (click)="goToGoat(goat)" class="card1">
                 <div class="card1_img">
                     <img [src]="goat.url_img">
                 </div>
                 <div class="card1_text">
                     <p> {{ goat.first_name}} {{ goat.last_name}} </p>
                 </div>
+                <div class="card1_link">
+                    <a routerLink="edit/{{goat.id}}" class="btn btn-success btn2">Edit</a>
+                    <a (click)="deleteGoat(goat)" class="btn btn-danger"> Delete</a> 
+                </div>
+                    
                 <div>
-                    <a routerLink="edit/{{goat.id}}" class="btn btn-success btn2">EDIT</a>    
-                    <a (click)="deleteGoat(goat)" class="btn btn-danger"> Delete</a>
                 </div>
             </div>
         </div>
