--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
   <nav>
     <h1> <a routerLink="/goats"> Greatest Of All Times </a></h1>
   </nav>
+  <div><a routerLink="/add-goat">Add</a></div>
 </header>
 <router-outlet></router-outlet>
