--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 <header>
   <nav>
     <h1> <a routerLink="/goats"> Greatest Of All Times </a></h1>
+    <ul>
+      <li><a *ngIf="logoutbtn" routerLink="/add-goat">Add</a></li>
+      <li><a *ngIf="loginbtn" routerLink="login" routerLinkActive="active">Login</a></li>
+      <li><a *ngIf="logoutbtn" (click)="logout()">logout</a></li>
+    </ul>
   </nav>
-  <div><a routerLink="/add-goat">Add</a></div>
 </header>
 <router-outlet></router-outlet>
