--- a/src/styles.css
+++ b/src/styles.css
@@ -19,9 +19,18 @@ h1{
     font-weight: 700;
 }
 
+ul{
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    list-style: none;
+}
+
+
 a{
     text-decoration: none;
     color: #ffffff;
+    
 }
 
 .container{
